--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -6,7 +6,8 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -14,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg   navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg   navbar-dark ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="lg" src="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -48,26 +49,26 @@
             <section class="wp" >
                     <div class="bloque2" >
                         <img src="../img/arma1.png" alt="">
-                        <p>
-                            dfaefefsadfadsefaefafaefaef
+                        <p class="texto2">
+                            UN ARMA DE ALTO CALIBRE .45
                         </p>
                     </div>
                         <div class="bloque2" >
                             <img src="../img/arma2.jpg" alt="">
-                            <p>
-                                dfaefefsadfadsefaefafaefaef
+                            <p class="texto2">
+                                UN ARMA CON DISPARO DE RAFAGA 156.45
                             </p>
                         </div>
                         <div class="bloque2" >
                             <img src="../img/arma3.png" alt="">
-                            <p>
-                                dfaefefsadfadsefaefafaefaef
+                            <p class="texto2">
+                                UNA ESCOPETA CAPAZ DE DESTROSAR ENEMIGOS
                             </p>
                         </div>
                         <div class="bloque2">
                             <img src="../img/arma4.png" alt="">
-                            <p>
-                                dfaefefsadfadsefaefafaefaef
+                            <p class="texto2">
+                                LA MATACHANCHO 
                             </p>
                         </div>
     </main>
