--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/stilos.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
     <link rel="shortcut icon" href="./img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>undeadworld</title>
@@ -50,10 +49,9 @@
         <section class="video cajita">
             <div>
                 <p >
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur
-                    temporibus, reprehenderit nesciunt molestiae, ipsa excepturi
-                    quibusdam earum, cumque deleniti deserunt minima saepe in magni
-                    officia sed. Aliquid eos eligendi quae?
+                    undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y
+                    acaba con interminables
+                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.
                 </p>
             </div>
             <div>
@@ -66,14 +64,11 @@
         <section class="fotoz cajita">
             <div>
                 <p >
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                    distinctio quibusdam neque, reiciendis nostrum enim rerum nam optio
-                    fuga quos ratione quasi omnis pariatur quisquam nulla error odio
-                    quas eius.
+                    Aquella noche era lúgubre y cálida. El silencio era profundo, solemne. Nada se escuchaba en el viejo cementerio, salvo el cantar de los grillos. Hasta que el ruido de una losa descorriéndose rompió la quietud.
                 </p>
             </div>
             <div>
-                <img class="imgh" src="./img/foto.jpg" alt="reload" />
+                <img  src="./img/foto.jpg" alt="reload" />
             </div>
         </section>
     </main>
