--- a/pages/colectors.html
+++ b/pages/colectors.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stilos.css">
-    <link
-        rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="shortcut icon" href="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>colectors</title>
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg   navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg   navbar-dark ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="lg" src="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" alt=""></a>
+                <a class="navbar-brand" href="#"><img class="lg" src="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -30,46 +33,51 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/colectors.html">colectores</a>
                         </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../pages/info.html">info</a></li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../pages/zombiinfo.html">zombieinfo</a></li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../pages/weapons.html">weapons</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/info.html">info</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/zombiinfo.html">zombieinfo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/weapons.html">weapons</a>
+                        </li>
+                    </ul>
+                    </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-            <section class="coleccionables">
-                <div>
-                    <div class="contenedor-flex">
-                        <img class="imgc" src="../img/coleccionable1.jpg" alt="reload">
-                        <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio harum enim.</p>
-                        <a href="" class="boton">buy</a>
-                    </div>
-                    <div>
-                        <img class="imgc" src="../img/coleccionable2.jpg"  alt="reload">
-                        <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill </p>
-                        <a href="" class="boton">buy</a>
-                    </div> 
-                    <div>
-                        <img class="imgc" src="../img/coleccionable3.jpeg" alt="">
-                        <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill </p>
-                        <a href="" class="boton">buy</a>
-                    </div>
+        <section class="coleccionables">
+            <div>
+                <div class="contenedor-flex">
+                    <img class="imgc" src="../img/coleccionable1.jpg" alt="reload">
+                    <p class=" txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                        odio harum enim.</p>
+                    <a href="" class="boton">buy</a>
                 </div>
-            </section>
+                <div>
+                    <img class="imgc" src="../img/coleccionable2.jpg" alt="reload">
+                    <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill
+                    </p>
+                    <a href="" class="boton">buy</a>
+                </div>
+                <div>
+                    <img class="imgc" src="../img/coleccionable3.jpeg" alt="">
+                    <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill
+                    </p>
+                    <a href="" class="boton">buy</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="pie">
         <section class="buttons">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
         </section>
         <p>Copyright © - 2023. All Rights Reserved</p>
     </footer>
@@ -77,4 +85,5 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
