--- a/pages/zombiinfo.html
+++ b/pages/zombiinfo.html
@@ -7,14 +7,15 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>zombiinfo</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg   navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg   navbar-dark ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="lg" src="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png"
                         alt=""></a>
@@ -54,7 +55,7 @@
                     <img src="../img/zombi1.jpg" class="img-fluid d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/zombi 2.jpg" class="img-fluid  w-100" alt="...">
+                    <img src="../img/zomb2.jpg" class="img-fluid  w-100" alt="...">
                 </div>
                 <div class="carousel-item ">
                     <img src="../img/zombi3.jpg" class="img-fluid d-block w-100" alt="...">
