--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div>
-                <img  src="./img/foto.jpg" alt="reload" />
+                <img  src="./img/zombi.jpg" alt="reload" />
             </div>
         </section>
     </main>
