--- a/pages/info.html
+++ b/pages/info.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="UNDEADWORLDS">
     <meta property="og:title" content="">
     <meta property="og:description" content="ENTRA PARA MATAR ZOMBIS">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://mellow-seahorse-d73f0b.netlify.app">
+    <meta property="og:image" content="https://mellow-seahorse-d73f0b.netlify.app/img/LOGO%20UNDEAD%20WORLD_Mesa%20de%20trabajo%201.png">
     
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
