--- a/pages/info.html
+++ b/pages/info.html
@@ -61,33 +61,33 @@
     <main>
         <section class="infogame">
             <div class="bloque">
-                <img src="../img/person1.jpg" alt="">
+                <img src="../img/hombre1.png" alt="">
                 <p class="animate__animated animate__rubberBand">undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y
                     acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
             <div class="bloque">
-                <img src="../img/person1.jpg" alt="">
+                <img src="../img/hombre2.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
             <div class="bloque">
-                <img src="../img/person1.jpg" alt="">
+                <img src="../img/hombre3.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
             <div class="bloque">
-                <img src="../img/person2.jpg" alt="">
+                <img src="../img/hombre4.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
             <div class="bloque">
-                <img src="../img/person2.jpg" alt="">
+                <img src="../img/hombre5.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
             <div class="bloque">
-                <img src="../img/person2.jpg" alt="">
+                <img src="../img/hombre6.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
