--- a/pages/info.html
+++ b/pages/info.html
@@ -71,8 +71,8 @@
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
-            <div class="bloque">
-                <img src="../img/hombre3.png" alt="">
+            <div class="bloquec">
+                <img class="imgca" src="../img/hombre3.png" alt="">
                 <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
                     oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
             </div>
