--- a/pages/info.html
+++ b/pages/info.html
@@ -62,34 +62,31 @@
         <section class="infogame">
             <div class="bloque">
                 <img src="../img/hombre1.png" alt="">
-                <p class="animate__animated animate__rubberBand">undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y
-                    acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p class="animate__animated animate__rubberBand">Carson H.
+                    Lead Game Designer &
+                    Head of Community</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre2.png" alt="">
-                <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p>Grant H.
+                    Executive Director</p>
             </div>
             <div class="bloquec">
                 <img class="imgca" src="../img/hombre3.png" alt="">
-                <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p>Michael B
+                    Director of Analytics</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre4.png" alt="">
-                <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p>Game Designer</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre5.png" alt="">
-                <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p>3D Weapon Artist</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre6.png" alt="">
-                <p>undeadworld, un juego de supervivencia zombie multijugador. Recoge armas y acaba con interminables
-                    oleadas de zombis en una experiencia inmersiva de disparos en primera persona.</p>
+                <p>Art Director</p>
             </div>
         </section>
     </main>
