--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <div>
                 <img  src="./img/zombi.jpg" alt="reload" />
             </div>
+            <div>
+                fgdfg
+            </div>
         </section>
     </main>
     <footer class="pie">
