--- a/pages/colectors.html
+++ b/pages/colectors.html
@@ -54,20 +54,17 @@
             <div>
                 <div class="contenedor-flex">
                     <img class="imgc" src="../img/coleccionable1.jpg" alt="reload">
-                    <p class=" txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                        odio harum enim.</p>
+                    <p class=" txt">coleccionable que es multiarticulable</p>
                     <a href="" class="boton">buy</a>
                 </div>
                 <div>
                     <img class="imgc" src="../img/coleccionable2.jpg" alt="reload">
-                    <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill
-                    </p>
+                    <p class="txt">coleccionable que no es multiarticulable</p>
                     <a href="" class="boton">buy</a>
                 </div>
                 <div>
                     <img class="imgc" src="../img/coleccionable3.jpeg" alt="">
-                    <p class="txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur sunt, vel ill
-                    </p>
+                    <p class="txt">unico coleccionable diseñado unicamente para niños/a</p>
                     <a href="" class="boton">buy</a>
                 </div>
             </div>
