--- a/pages/info.html
+++ b/pages/info.html
@@ -68,25 +68,25 @@
             </div>
             <div class="bloque">
                 <img src="../img/hombre2.png" alt="">
-                <p>Grant H.
+                <p class="animate__animated animate__rubberBand">Grant H.
                     Executive Director</p>
             </div>
             <div class="bloquec">
                 <img class="imgca" src="../img/hombre3.png" alt="">
-                <p>Michael B
+                <p class="animate__animated animate__rubberBand">Michael B
                     Director of Analytics</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre4.png" alt="">
-                <p>Game Designer</p>
+                <p class="animate__animated animate__rubberBand">Game Designer</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre5.png" alt="">
-                <p>3D Weapon Artist</p>
+                <p class="animate__animated animate__rubberBand">3D Weapon Artist</p>
             </div>
             <div class="bloque">
                 <img src="../img/hombre6.png" alt="">
-                <p>Art Director</p>
+                <p class="animate__animated animate__rubberBand">Art Director</p>
             </div>
         </section>
     </main>
