--- a/pages/colectors.html
+++ b/pages/colectors.html
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/colectors.html">colectores</a>
+                            <a class="nav-link active" href="../pages/colectors.html">colectores</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/info.html">info</a>
@@ -54,7 +54,7 @@
             <div>
                 <div class="contenedor-flex">
                     <img class="imgc" src="../img/coleccionable1.jpg" alt="reload">
-                    <p class=" txt">coleccionable que es multiarticulable</p>
+                    <p class="txt">coleccionable que es multiarticulable</p>
                     <a href="" class="boton">buy</a>
                 </div>
                 <div>
@@ -72,9 +72,9 @@
     </main>
     <footer class="pie">
         <section class="buttons">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/?lang=es" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </section>
         <p>Copyright © - 2023. All Rights Reserved</p>
     </footer>
