--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/colectors.html">colectores</a>
@@ -36,7 +36,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="../pages/zombiinfo.html">zombieinfo</a></li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../pages/weapons.html">weapons</a>
+                                    <a class="nav-link active" href="../pages/weapons.html">weapons</a>
                                 </li>
                             </ul>
                         </li>
@@ -74,9 +74,9 @@
     </main>
     <footer class="pie">
         <section class="buttons">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
+        <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/?lang=es" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </section>
         <p>Copyright © - 2023. All Rights Reserved</p>
     </footer>
