--- a/pages/zombiinfo.html
+++ b/pages/zombiinfo.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/colectors.html">colectores</a>
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="../pages/info.html">info</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/zombiinfo.html">zombieinfo</a>
+                            <a class="nav-link active" href="../pages/zombiinfo.html">zombieinfo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/weapons.html">weapons</a>
@@ -52,13 +52,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/zombi1.jpg" class="img-fluid d-block w-100" alt="...">
+                    <img src="../img/zombi1.jpg" class="img-fluid d-block w-100" alt="imagenzombi1">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/zomb2.jpg" class="img-fluid  w-100" alt="...">
+                    <img src="../img/zomb2.jpg" class="img-fluid  w-100" alt="imagenzombi2">
                 </div>
                 <div class="carousel-item ">
-                    <img src="../img/zombi3.jpg" class="img-fluid d-block w-100" alt="...">
+                    <img src="../img/zombi3.jpg" class="img-fluid d-block w-100" alt="imagenzombi3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -73,9 +73,9 @@
     </main>
     <footer class="pie">
         <section class="buttons">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
+            <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/?lang=es" class="fa fa-twitter"></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </section>
         <p>Copyright © - 2023. All Rights Reserved</p>
     </footer>
