--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
                     
                     Así concluye esta historia corta de zombis. El mundo de los zombis a menudo se presta a relatos llenos de tensión y emoción, donde la supervivencia y la esperanza son las fuerzas impulsoras.</h3>
             </div>
+            <div>
+                <p class="par">
+                    ¿QUIENES SOMOS?
+                </p>
+            </div>
+            <div>
+                <p class="par2">
+                    En Nightmare Studios, somos unos apasionados del terror y los videojuegos, fundamos nuestra desarrolladora en 20XX en Argentina con el sueño de crear juegos que hicieran vibrar a los jugadores con sus historias, gráficos y sonidos. Nuestro equipo está formado por talentosos profesionales que tienen una amplia experiencia y conocimiento en el género y en el desarrollo de videojuegos. Nuestra filosofía es ofrecer juegos que sean originales, inmersivos y desafiantes. ¿Te atreves a entrar en nuestro mundo de pesadillas con nuestro nuevo juego Underworld?
+                </p>
+            </div>
         </section>
     </main>
     <footer class="pie">
