--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content=" compra coleccionables ">
+    <meta name="keywors" content="muertos,zombis,armas,bombas,destruccion,sangre,terror,cerebro,desmembramiento,soldados">
     <link rel="shortcut icon" href="./img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&display=swap">
-
     <link rel="stylesheet" href="./css/estilos.css" />
-    <title>undeadworld</title>
+    <title>pagina -inicio</title>
 </head>
 
 <body >
