--- a/pages/info.html
+++ b/pages/info.html
@@ -7,7 +7,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" En UNDEADWORLDS, los jugadores se adentran en una Europa continental infestada por unos horripilantes y sanguinarios clones llamados Zeds ">
+    <meta name="description" content=" informacion de todos nuestros colaboradores ">
     <meta name="keywors" content="muertos,zombis,armas,bombas,destruccion,sangre,terror,cerebro,desmembramiento,soldados">
     <!--PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="UNDEADWORLDS">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>info | el juego de zombis mas entretenido</title>
+    <title>pagina -informacion</title>
 </head>
 
 <body>
