--- a/pages/colectors.html
+++ b/pages/colectors.html
@@ -7,11 +7,13 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content=" compra coleccionables ">
+    <meta name="keywors" content="muertos,zombis,armas,bombas,destruccion,sangre,terror,cerebro,desmembramiento,soldados">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="shortcut icon" href="../img/LOGO UNDEAD WORLD_Mesa de trabajo 1.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>colectors</title>
+    <title>pagina -colectores</title>
 </head>
 
 <body>
